fix text width alignment

--- a/src/SCSS/_layout.scss
+++ b/src/SCSS/_layout.scss
@@ -50,14 +50,11 @@ body{
   #content{
     padding-top: 18px;
     padding-left: 30px;
+    max-width: 800px;
 
     #mobile-profile{
       margin-top: 10px;
       margin-bottom: 10px;
-    }
-
-    p{
-      max-width: 600px;
     }
 
     a{
